# TinyONNX

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: build.yml  rpi.yml  validate.yml
benchmarks/: conv2d_bench.cpp  matmul_bench.cpp  simple_model_bench.cpp
include/: execution_engine.h  graph.h  graph_utils.h  onnx_loader.h  onnx_utils.h  operators.h  tensor.h
include/utils/: logger.h  meminfo.h  timer.h
src/: conv2d.cpp  execution_engine.cpp  graph.cpp  graph_utils.cpp  main.cpp  onnx_loader.cpp  onnx_utils.cpp  operators.cpp  tensor.cpp
test_data/: input_tensor.npy  reference_output.npy  simple_matmul_relu.onnx
tests/: test_add.cpp  test_batchnorm.cpp  test_conv2d.cpp  test_global_avgpool.cpp  test_graph_parsing.cpp  test_matmul.cpp  test_relu.cpp  test_reshape.cpp  test_simple_model.cpp  test_softmax.cpp  test_toposort.cpp  test_transpose.cpp  validate_mobilenet.py
